--- a/CarRentalSystem/css/general.css
+++ b/CarRentalSystem/css/general.css
@@ -1,15 +1,32 @@
 body {
-    font-family: "Poppins", Arial, sans-serif;
+    font-family: "League Spartan", sans-serif ;
     margin: 0;
     padding: 0;
-    background-color: #f9f9f9;
-    color: #333;
+    background-color:hsl(0, 0%, 0%) ;
+    color: #fff;
     line-height: 1.6;
   }
-  
+  *{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box; 
+ }
+ img{
+    width: 100%;
+
+ }
+ a{
+    text-decoration: none;
+    color: inherit;
+ }
+ ul{
+    list-style: none;
+    padding: 0;
+    margin: 0;
+ }
   h2 {
     font-size: 2rem;
-    color: #333;
+    color:#fff;
     margin-bottom: 20px;
     text-align: left;
   }
