--- a/CarRentalSystem/css/header.css
+++ b/CarRentalSystem/css/header.css
@@ -1,9 +1,13 @@
 header {
-    background: linear-gradient(135deg, #4a90e2, #3b5998);
+    font-family: "League Spartan", sans-serif ;
+    background: linear-gradient(135deg, hsl(0, 99%, 29%),hsl(0, 99%, 23%));
     color: white;
     padding: 20px 40px;
     text-align: center;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
   }
   
   header h1 {
