--- a/CarRentalSystem/css/general.css
+++ b/CarRentalSystem/css/general.css
@@ -2,8 +2,8 @@ body {
     font-family: "League Spartan", sans-serif ;
     margin: 0;
     padding: 0;
-    background-color:hsl(0, 0%, 0%) ;
-    color: #fff;
+    background-color:#F8FAFC ;
+    color: #9AA6B2;
     line-height: 1.6;
   }
   *{
@@ -26,7 +26,7 @@ body {
  }
   h2 {
     font-size: 2rem;
-    color:#fff;
+    color:#9AA6B2;
     margin-bottom: 20px;
     text-align: left;
   }
