--- a/CarRentalSystem/css/forms.css
+++ b/CarRentalSystem/css/forms.css
@@ -1,5 +1,9 @@
+body{
+    font-family: "League Spartan", sans-serif ;
+}
 .login-container,
 .signup-container {
+  font-family: inherit;
   max-width: 400px;
   margin: 50px auto;
   padding: 20px;
@@ -11,16 +15,18 @@
 
 .login-form,
 .signup-form {
+  font-family: inherit;
   display: flex;
   flex-direction: column;
-  gap: 15px;
+  gap: 20px;
 }
 
 .login-form input,
 .signup-form input {
+  font-family: inherit;
   width: 100%;
   padding: 10px;
-  border: 1px solid #ccc;
+  border: 1.5px solid #ccc;
   border-radius: 5px;
   font-size: 1rem;
 }
@@ -28,7 +34,7 @@
 .login-form button,
 .signup-form button {
   padding: 10px;
-  background-color: #4a90e2;
+  background-color:#9AA6B2;
   color: white;
   border: none;
   border-radius: 5px;
@@ -39,11 +45,14 @@
 
 .login-form button:hover,
 .signup-form button:hover {
-  background-color: #3b5998;
+  background-color: #ddd;
 }
 
 .error {
   color: red;
   font-size: 0.9rem;
   margin-top: 10px;
+}
+.signup-container p{
+  margin: 15px;
 }
