--- a/CarRentalSystem/css/general.css
+++ b/CarRentalSystem/css/general.css
@@ -28,7 +28,7 @@ body {
     font-size: 2rem;
     color:#9AA6B2;
     margin-bottom: 20px;
-    text-align: left;
+    text-align: center;
   }
   
   .container {
