--- a/CarRentalSystem/css/footer.css
+++ b/CarRentalSystem/css/footer.css
@@ -1,18 +1,27 @@
 footer {
+    font-family: "League Spartan", sans-serif ;
     background-color:#9AA6B2;
     color: white;
-    text-align: center;
-    padding: 20px 40px;
+    padding: 20px 20px;
+    display: flex;
+    flex-direction: column;
     font-size: 0.9rem;
     margin-top: 40px;
+    border-radius:  40px 40px 0 0;
+    width: 80%;
+    margin: auto;
+    transition: .4s ease-in-out;
+    text-align: center;
+    box-shadow: rgba(0, 0, 0, 0.4) 1px 2px 2px;
   }
   
   .footer-container {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    display: flex;
     gap: 30px;
     justify-items: center;
-    padding: 20px 0;
+    justify-content: center;
+    justify-content: space-around;
+
   }
   
   .footer-section h3 {
@@ -40,9 +49,21 @@ footer {
   .social-links li a:hover {
     color: #4a90e2;
   }
-  
+
+  .footer-section p{
+    margin: 0;
+  }
+  .quick-links{
+    display: flex;
+    width: 100%;
+    gap: 10px;
+  }
   .copyright {
+    display: block;
     text-align: center;
     padding: 10px 0;
     color: #ddd;
+  }
+  .copyright p{
+    margin: 0;
   }
