--- a/CarRentalSystem/css/forms.css
+++ b/CarRentalSystem/css/forms.css
@@ -1,58 +1,100 @@
 body{
     font-family: "League Spartan", sans-serif ;
 }
+
 .login-container,
 .signup-container {
-  font-family: inherit;
   max-width: 400px;
   margin: 50px auto;
   padding: 20px;
-  background: white;
-  border-radius: 8px;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   text-align: center;
-}
-
-.login-form,
-.signup-form {
-  font-family: inherit;
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  gap: 10px;
+  background-color: white;
+  border-radius: 25px;
+  transition: .4s ease-in-out;
+  box-shadow: rgba(0, 0, 0, 0.4) 1px 2px 2px;
 }
 
-.login-form input,
-.signup-form input {
-  font-family: inherit;
-  width: 100%;
-  padding: 10px;
-  border: 1.5px solid #ccc;
-  border-radius: 5px;
-  font-size: 1rem;
+.login-container:hover,
+.signup-container:hover {
+  transform: translateX(-0.5em) translateY(-0.5em);
+  border: 1px solid #9AA6B2;
+  box-shadow: 10px 10px 0px #9AA6B2;
 }
 
-.login-form button,
-.signup-form button {
-  padding: 10px;
-  background-color:#9AA6B2;
-  color: white;
-  border: none;
-  border-radius: 5px;
-  font-size: 1rem;
+.login-container h2,
+.signup-container h2 {
+  color:#9AA6B2;
+  text-align: center;
+  font-weight: bold;
+}
+.signup-container p{
+  margin: 15px;
+}
+.signup-container p:hover{
+  color:#9AA6B2;
   cursor: pointer;
-  transition: background-color 0.3s ease;
 }
-
-.login-form button:hover,
-.signup-form button:hover {
-  background-color: #ddd;
-}
-
 .error {
   color: red;
   font-size: 0.9rem;
   margin-top: 10px;
 }
-.signup-container p{
-  margin: 15px;
+
+.login-form input,
+.signup-form input {
+  border-radius: 10px;
+  border: 1px solid #BCCCDC;
+  background-color: #F8FAFC;
+  width: 100%;
+  margin: 10px 0;
+  padding: 10px;
+  outline: none;
+  padding: 0.7em;
+  transition: .4s ease-in-out;
+}
+
+.login-form input:hover,
+.signup-form input:hover {
+  box-shadow: 6px 6px 0px #9AA6B2,
+             -3px -3px 10px #ffffff;
+}
+
+.login-form input:focus,
+.signup-form input:focus {
+  background: #ffffff;
+  box-shadow:  2px 5px 10px rgba(0,0,0,0.3);
+}
+
+.login-form button,
+.signup-form button {
+  width: 100%;
+  margin-top: 1em;
+  align-self: center;
+  padding: 0.7em;
+  padding-left: 1em;
+  padding-right: 1em;
+  border-radius: 10px;
+  border: none;
+  background-color:#9AA6B2;
+  color: white;
+  transition: .4s ease-in-out;
+  box-shadow: rgba(0, 0, 0, 0.4) 1px 1px 1px;
+}
+
+.login-form button:hover,
+.signup-form button:hover {
+  box-shadow: 6px 6px 0px #9AA6B2,
+              -3px -3px 10px #ffffff;
+    border: 1px solid #BCCCDC;
+
+}
+
+.login-form button:active,
+.signup-form button:active {
+  transition: .2s;
+  transform: translateX(0em) translateY(0em);
+  box-shadow: none;
 }
