--- a/CarRentalSystem/css/index.css
+++ b/CarRentalSystem/css/index.css
@@ -6,15 +6,22 @@
     gap: 80px;
     padding: 20px;
 }
+.row{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
 
 /* Styling for individual car cards */
-.card {
+/* .card {
     border: 1px solid #ddd;
     border-radius: 8px;
     padding: 15px;
     box-shadow: 0 2px 4px rgba(0,0,0,0.1);
     transition: transform 0.3s ease, box-shadow 0.3s ease;
-}
+} */
 
 .card:hover {
     transform: scale(1.05);
@@ -153,3 +160,53 @@
     padding: 10px;
     border-radius: 5px;
 }
+
+
+
+
+main {
+    padding: 40px;
+  }
+  
+  .card {
+    background-color: #fff;
+    color: #000;
+    /* border-radius: 12px; */
+    /* box-shadow: 0 6px 12px rgba(0, 0, 0, 0.1); */
+    overflow: hidden;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+    /* width: 100%; */
+    max-width: 350px;
+    text-align: center;
+    /* display: flex; */
+    /* flex-direction: column; */
+    align-items: center;
+  }
+  
+
+  .card img {
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+    border-bottom: 1px solid #ddd;
+  }
+  
+  .card h3,
+  .card p {
+    text-transform: capitalize;
+    margin: 0;
+  }
+  
+  .card p strong {
+    font-weight: bold;
+  }
+  
+  .available {
+    color: hsl(0, 99%, 23%);
+    font-weight: bold;
+  }
+  
+  .not-available {
+    color:#6c757d;
+    font-weight: bold;
+  }
