edit filter option , cards (2) ,rent request

--- a/CarRentalSystem/css/RentalPageStyle.css
+++ b/CarRentalSystem/css/RentalPageStyle.css
@@ -1,3 +1,6 @@
+body{
+    font-family: "League Spartan", sans-serif !important;
+}        
         .rental-request {
             background: white;
             border-radius: 10px;
@@ -95,7 +98,7 @@
 
         
 .my-rentals {
-    max-width: 1000px;
+    max-width: 100%;
     margin: 0 auto;
     padding: 20px;
 }
