--- a/CarRentalSystem/css/rent-request.css
+++ b/CarRentalSystem/css/rent-request.css
@@ -2,34 +2,53 @@
     max-width: 600px;
     margin: 0 auto;
     padding: 20px;
-    background-color: #f5f5f5;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    background-color: #fff;
+    border-radius: 40px;
+    box-shadow: 0 0 13px rgba(0, 0, 0, 0.1);
 }
 
 .rental-form h2 {
     margin-top: 0;
-    color: #333;
+    color: #9AA6B2;
 }
 
 .rental-form .car-details {
     display: flex;
     margin-bottom: 20px;
     align-items: center;
+    flex-direction: row;
+    justify-content: center;
+    width: 100%;
+    gap: 10px;
 }
-
-.rental-form .car-image {
-    width: 150px;
-    margin-right: 20px;
-}
+    .car-info {
+    display: flex;
+    background: #f8f9fa;
+    padding: 15px;
+    border-radius: 10px;
+    border: 1px solid #e9ecef;
+    width: 50%;
+    height: 100%;
+    flex-direction: column;
+    align-items: center;
+        }
+        .car-image {
+            width: 45%;
+            height: 100%;
+            object-fit: cover;
+            border-radius: 10px;
+            transition: transform 0.3s ease;
+        }
 
 .rental-form .car-image img {
     width: 100%;
+    height: auto;
     border-radius: 5px;
 }
 
 .rental-form .car-info h3 {
     margin-top: 0;
+    text-transform: capitalize;
 }
 
 .rental-form form {
@@ -83,3 +102,4 @@
     border-radius: 4px;
     margin-bottom: 20px;
 }
+    
