--- a/CarRentalSystem/css/about us.css
+++ b/CarRentalSystem/css/about us.css
@@ -1,49 +1,50 @@
 header nav ul {
-      list-style: none;
-      display: flex;
-      gap: 20px;
-      padding: 0;
-    }
-    
-    header nav ul li a {
-      text-decoration: none;
-      color: white;
-      padding: 5px 10px;
-      transition: all 0.3s ease;
-      position: relative;
-    }
-    
-    /* تنسيق العنصر النشط */
-    header nav ul li a.active {
-      font-weight: bold;
-      transform: scale(1.1);
-    }
-    
-    header nav ul li a.active::after {
-      content: '';
-      position: absolute;
-      bottom: -5px;
-      left: 10px;
-      width: calc(100% - 20px);
-      height: 2px;
-      background-color: white;
-    }
-    
-    /* تأثير hover */
-     header nav ul li a:hover::after {
-      content: '';
-      position: absolute;
-      bottom: -5px;
-      left: 10px;
-      width: calc(100% - 20px);
-      height: 2px;
-      background-color: white;
-    }
-    /* أيقونة البروفايل */
-    header nav ul li a.profile-link.active svg path {
-      fill: #0d6efd;
-    }
-    
+  list-style: none;
+  display: flex;
+  gap: 20px;
+  padding: 0;
+}
+
+header nav ul li a {
+  text-decoration: none;
+  color: white;
+  padding: 5px 10px;
+  transition: all 0.3s ease;
+  position: relative;
+}
+
+/* تنسيق العنصر النشط */
+header nav ul li a.active {
+  font-weight: bold;
+  transform: scale(1.1);
+}
+
+header nav ul li a.active::after {
+  content: '';
+  position: absolute;
+  bottom: -5px;
+  left: 10px;
+  width: calc(100% - 20px);
+  height: 2px;
+  background-color: white;
+}
+
+/* تأثير hover */
+header nav ul li a:hover::after {
+  content: '';
+  position: absolute;
+  bottom: -5px;
+  left: 10px;
+  width: calc(100% - 20px);
+  height: 2px;
+  background-color: #48A6A7;
+}
+
+/* أيقونة البروفايل */
+header nav ul li a.profile-link.active svg path {
+  fill: #48A6A7;
+}
+
 .about-container {
   display: flex;
   flex-direction: column;
@@ -51,106 +52,108 @@ header nav ul {
   height: auto;
   margin: 40px auto;
   padding: 40px 20px;
-  background-color: #fff;
+  background-color: #F2EFE7;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 .about-container h1 {
   width: 300px;
   margin: auto;
-  border-bottom: 2px solid #9AA6B2;
+  border-bottom: 2px solid #9ACBD0;
   text-align: center;
   margin-bottom: 50px;
   padding: 15px;
-  color:#9AA6B2;
+  color: #9ACBD0;
 }
 
-.about-section-container{
+.about-section-container {
   display: flex;
-    align-items: center;
-    width: 100%;
-    height: auto;
-    justify-content: space-evenly;
-    flex-wrap: wrap;
+  align-items: center;
+  width: 100%;
+  height: auto;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
 }
+
 .about-section {
   display: flex;
   align-items: center;
   flex-wrap: nowrap;
   width: 40%;
-  border-bottom:2px solid#9AA6B2;
+  border-bottom: 2px solid #9ACBD0;
   margin-bottom: 30px;
   gap: 25px;
   padding: 25px;
 }
 
 .about-section h2 {
-  color:#9AA6B2;
-  border-left: 5px solid#9AA6B2;
+  color: #9ACBD0;
+  border-left: 5px solid #9ACBD0;
   padding-left: 10px;
 }
 
 .about-section p {
   margin-bottom: 20px;
 }
-.features-container{
+
+.features-container {
   display: flex;
   flex-direction: column;
   width: 100%;
   height: auto;
   margin: 40px auto;
   padding: 40px 20px;
-  background-color: #fff;
+  background-color: #F2EFE7;
 }
 
 .features-row-container {
-    display: flex;
-    align-items: center;
-    width: 100%;
-    height: auto;
-    justify-content: space-evenly;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-content: center;
-    flex-direction: column;
-  }
+  display: flex;
+  align-items: center;
+  width: 100%;
+  height: auto;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-content: center;
+  flex-direction: column;
+}
 
-.features-container h1{
+.features-container h1 {
   width: 300px;
   margin: auto;
-  border-bottom: 2px solid #9AA6B2;
+  border-bottom: 2px solid #9ACBD0;
   text-align: center;
   margin-bottom: 50px;
   padding: 15px;
-  color:#9AA6B2;
-
+  color: #9ACBD0;
 }
-.features-container .row{
-    display: flex;
-    align-items: center;
-    width: 100%;
-    gap: 10px;
-    padding: 25px;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    justify-content: center;
-    border-bottom: 3px solid#9AA6B2;
-  
 
+.features-container .row {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  gap: 10px;
+  padding: 25px;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: center;
+  border-bottom: 3px solid #9ACBD0;
 }
-.features-row-container p{
+
+.features-row-container p {
   width: 40%;
 }
+
 /* تنسيق الصور داخل الجدول */
- .features-img {
-    width: 30%;
-    object-fit: contain;
-    border-radius: 8px;
-    padding: 0;
+.features-img {
+  width: 30%;
+  object-fit: contain;
+  border-radius: 8px;
+  padding: 0;
 }
+
 .features-img img {
   width: 300px;
   height: auto;
   padding: 0;
 }
-
