--- a/CarRentalSystem/css/general.css
+++ b/CarRentalSystem/css/general.css
@@ -1,39 +1,43 @@
 body {
-    font-family: "League Spartan", sans-serif ;
+    font-family: "League Spartan", sans-serif;
     margin: 0;
     padding: 0;
-    background-color:#F8FAFC ;
-    color: #9AA6B2;
+    background-color: #f9f9f9;
+    color: #9ACBD0;
     line-height: 1.6;
-  }
-  *{
+}
+
+* {
     margin: 0;
     padding: 0;
-    box-sizing: border-box; 
- }
- img{
-    width: 100%;
+    box-sizing: border-box;
+}
 
- }
- a{
+img {
+    width: 100%;
+}
+
+a {
     text-decoration: none;
     color: inherit;
- }
- ul{
+}
+
+ul {
     list-style: none;
     padding: 0;
     margin: 0;
- }
-  h2 {
+}
+
+h2 {
     font-size: 2rem;
-    color:#9AA6B2;
+    color: #006A71;
     margin-bottom: 20px;
     text-align: center;
-  }
-  
-  .container {
+}
+
+.container {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     gap: 30px;
     justify-items: center;
-  }
+}
